--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,14 @@ code/1021(1)*
 code/1021(2)*
 code/1022*
 code/1033*
+code/1040*
+code/1043*
+code/1044*
+code/1048*
+code/1049*
+code/1051*
+code/1065*
+code/1066*
+code/1088*
+code/1098*
+code/1100*
