--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+template.h
 code/*.exe
 code/1010*
 code/1012*
@@ -8,15 +9,22 @@ code/1018*
 code/1021(1)*
 code/1021(2)*
 code/1022*
+code/1030*
 code/1033*
-code/1040*
 code/1043*
 code/1044*
 code/1048*
-code/1049*
 code/1051*
+code/1057*
+code/1060*
 code/1065*
-code/1066*
-code/1088*
-code/1098*
+code/1082*
+code/1095*
 code/1100*
+code/1103*
+code/1104*
+code/1108*
+code/1111*
+code/1114*
+code/1115*
+code/1118*
